2011-01-26:
 - Issue #34: Unresolved variable in string definition
 - Issue #35: Math calculations using square brackets not supported

2010-12-29:
 - More inspection test cases
 - Bugfixes

2010-12-28:
 - New inspection to convert a simple variable usage $a to the equivalent parameter expansion ${a}
 - New inspection to highlight unused parameter values for function calls
 - New inspection to highlight unused function definitions
 - Bugfix: A duplicate function definition on the global level is highlighted again
 - Changed file icon for path completions

2010-12-23:
 - Fixed exception which occured while editing the shebang line of a script
 - Inline renaming of variables inside of parameter expansion elements

2010-12-16:
 - Fixed parsing of HereDocs with single quote markers, i.e. started with <<'EOF'
 - Fixed parsing of variables in evaluating heredocs

2010-12-10:
 - No inserted whitespace after certain rename refactorings
 - Version 0.9.17

2010-12-09:
 - Find usages now is able to group by Read/Write access

2010-12-03:
 - Improved parsing of parameter substitutions, e.g. for ${a:=b} assignments and ${!a} indirect references
 - Formatter fixes

2010-11-25:
 - Version 0.9.16-ideaX

2010-11-23:
 - Compilation fixes to work with 98.402

2010-11-02:
 - Lexer fix for `for f in ...`

2010-10-05:
 - Removed use of class DefaultRefactoring provider, restored compatibility with latest IDEA X EAPs
 - Version 0.9.15-ideaX
 
2010-08-12:
 - Fixed redirection parsing
 - Version 0.9.14-maia

2010-07-28:
 - Fixed parsing of single $ characters, e.g. "$a$"
 - Improved parsing of for loops
 - Fixed resolving of global variables

2010-07-23:
 - Fixed exception which occured while adding a REPL console
 
2010-07-22:
 - Lexer improvements

2010-07-21:
 - Fixed new Bash script action if the extension .bash was used
 
2010-07-20:
 - Many improvements to arithmetic expression parsing
 
2010-07-17:
 - Fixed evaluation of advanced arithmetic expressions
 - Improvements to the lexer