@@ -38,7 +38,7 @@ public final class LanguageBuiltins {
     //variables which are references to parameters. This is just a reasonable default set, Bash doesn't seem to restrict
     //the range of valid parameter
     public static final Collection<String> bashShellParamReferences = Sets.newHashSet(
-            "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19"
+            "*", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19"
     );
 
     /**
