@@ -1,6 +1,7 @@
 2011-01-26:
  - Issue #34: Unresolved variable in string definition
  - Issue #35: Math calculations using square brackets not supported
+ - Issue #36: Incorrect inspection of unused parameter when using $* inside function
 
 2010-12-29:
  - More inspection test cases
